--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
    },
    "content_scripts": [ {
       "js": [ "content.js" ],
-      "matches": [ "*://www.amazon.com/*", "*://smile.amazon.com/*", "*://www.amazon.ca/*", "*://www.amazon.co.uk/*", "*://www.amazon.de/*", "*://www.amazon.es/*", "*://www.amazon.fr/*", "*://www.amazon.it/*", "*://www.amazon.co.jp/*", "*://www.amazon.cn/*", "*://www.amazon.in/*", "*://www.flipkart.com/*", "*://dl.flipkart.com/*" ]
+      "matches": [ "*://www.mycchk.com/*", "*://smile.mycchk.com/*", "*://www.mycchk.ca/*", "*://www.mycchk.co.uk/*", "*://www.mycchk.de/*", "*://www.mycchk.es/*", "*://www.mycchk.fr/*", "*://www.mycchk.it/*", "*://www.mycchk.co.jp/*", "*://www.mycchk.cn/*", "*://www.mycchk.in/*", "*://www.flipkart.com/*", "*://dl.flipkart.com/*" ]
    } ],
    "description": "You do not need to donate to feed millions of children. Your actions can.",
    "homepage_url": "http://opengenus.org",
@@ -21,7 +21,7 @@
    "key": "",
    "manifest_version": 1,
    "name": "OpenGenus Coin",
-   "permissions": [ "webRequest", "webRequestBlocking", "https://www.bluehost.com/*", "http://www.bluehost.com/*", "http://www.amazon.com/*", "https://www.amazon.com/*", "http://smile.amazon.com/*", "https://smile.amazon.com/*", "http://www.amazon.ca/*", "https://www.amazon.ca/*", "http://www.amazon.co.uk/*", "https://www.amazon.co.uk/*", "http://www.amazon.de/*", "https://www.amazon.de/*", "http://www.amazon.es/*", "https://www.amazon.es/*", "http://www.amazon.fr/*", "https://www.amazon.fr/*", "http://www.amazon.it/*", "https://www.amazon.it/*", "http://www.amazon.co.jp/*", "https://www.amazon.co.jp/*", "http://www.amazon.cn/*", "https://www.amazon.cn/*", "http://www.amazon.in/*", "https://www.amazon.in/*", "http://www.flipkart.com/*", "https://www.flipkart.com/*", "http://dl.flipkart.com/*", "https://dl.flipkart.com/*" ],
+   "permissions": [ "webRequest", "webRequestBlocking", "https://www.bluehost.com/*", "http://www.bluehost.com/*", "http://www.mycchk.com/*", "https://www.mycchk.com/*", "http://smile.mycchk.com/*", "https://smile.mycchk.com/*", "http://www.mycchk.ca/*", "https://www.mycchk.ca/*", "http://www.mycchk.co.uk/*", "https://www.mycchk.co.uk/*", "http://www.mycchk.de/*", "https://www.mycchk.de/*", "http://www.mycchk.es/*", "https://www.mycchk.es/*", "http://www.mycchk.fr/*", "https://www.mycchk.fr/*", "http://www.mycchk.it/*", "https://www.mycchk.it/*", "http://www.mycchk.co.jp/*", "https://www.mycchk.co.jp/*", "http://www.mycchk.cn/*", "https://www.mycchk.cn/*", "http://www.mycchk.in/*", "https://www.mycchk.in/*", "http://www.flipkart.com/*", "https://www.flipkart.com/*", "http://dl.flipkart.com/*", "https://dl.flipkart.com/*" ],
    "short_name": "",
    "update_url": "",
    "version": "1.0.0"
